refactor: resolve some issues discovered by SonarLint